[tool.poetry]
name = "django-pyctx"
version = "0.2.2"
description = "Context package to use data between function calls, use timers and log it for Django."
authors = ["M. Olcay TERCANLI <molcay@mail.com>"]
maintainers = ["M. Olcay TERCANLI <molcay@mail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/molcay/django-pyctx"
keywords = [
    "Django",
    "Context",
    "pyctx",
    "django-pyctx"
]

[tool.poetry.dependencies]
python = ">3.7.0"

pyctx = ">0.1.7"
Django = ">2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/molcay/django-pyctx/issues"
